higher z-index to avoid ads

--- a/src/content/ttsPlayer/ttsPlayer.scss
+++ b/src/content/ttsPlayer/ttsPlayer.scss
@@ -74,7 +74,7 @@
     width: auto;
     min-width: 560px;
     max-width: 90vw;
-    z-index: 1000;
+    z-index: 2147483647;
     gap: 1.2em;
 
     .tts-player-btn {
